--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -145,3 +145,87 @@
   }
 }
 
+
+.campaign-card__img-large {
+  width: 100%;
+}
+
+.campaign-card__img-large img {
+  aspect-ratio: 280/188;
+  object-fit: cover;
+  width: 100%;
+
+  @include mq("md") {
+    aspect-ratio: 520/347;
+  }
+}
+
+.campaign-card__body-large {
+  padding-top: rem(16);
+  padding-right: rem(17);
+  padding-bottom: rem(17);
+  padding-left: rem(16);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
+  @include mq("md") {
+    padding-top: rem(24);
+    padding-right: rem(24);
+    padding-bottom: rem(45);
+    padding-left: rem(24);
+  }
+}
+
+.campaign-card__title-sub-large {
+  font-weight: $medium;
+  font-family: "Noto Sans JP", serif;
+  margin-top: rem(5);
+  font-size: rem(16);
+  border-bottom: rem(1) solid $green;
+  padding-bottom: rem(7);
+
+  @include mq("md") {
+    font-size: rem(24);
+    padding-bottom: rem(3);
+  }
+}
+
+.campaign-card__text-box {
+  margin-top: rem(15);
+
+  @include mq("md") {
+    margin-top: rem(17);
+  }
+}
+
+.campaign-card__date {
+  color: $green;
+  font-size: rem(16);
+  font-weight: $bold;
+  text-align: center;
+  margin-top: rem(27);
+  font-family: "Lato", sans-serif;
+}
+
+.campaign-card__reserve {
+  color: $green;
+  font-size: rem(14);
+  font-weight: $normal;
+  font-family: "Noto Sans JP", serif;
+  text-align: center;
+  margin-top: rem(3);
+}
+
+.campaign-card__layout {
+  text-align: center;
+  margin-top: rem(12);
+}
+
+.campaign-card__price-campaign {
+  margin-top: rem(10);
+
+  @include mq("md") {
+    margin-top: rem(24);
+  }
+}
