プライスページ追加

--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -22,7 +22,7 @@
   font-size: rem(16);
   font-weight: $medium;
   line-height: 1.5;
-  font-family: Noto Sans JP;
+  font-family: "Noto Sans JP", serif;
   margin-top: rem(-3);
   border-bottom: rem(1) solid $green;
   padding-bottom: rem(3);
