--- a/src/sass/module/_price-page.scss
+++ b/src/sass/module/_price-page.scss
@@ -23,26 +23,10 @@
   }
 }
 
-.price-page__items-item:nth-child(2) {
-  margin-top: rem(38);
-
-  @include mq("md") {
-    margin-top: rem(80);
-  }
-}
-
-.price-page__items-item:nth-child(3) {
+.price-page__items-item {
   margin-top: rem(34);
 
   @include mq("md") {
     margin-top: rem(80);
-  }
-}
-
-.price-page__items-item:nth-child(4) {
-  margin-top: rem(34);
-
-  @include mq("md") {
-    margin-top: rem(81);
   }
 }
