--- a/src/sass/module/_site-map-menu.scss
+++ b/src/sass/module/_site-map-menu.scss
@@ -1,10 +1,10 @@
 @use "global" as *;
 
-.footer-menu {
+.site-map-menu {
   display: flex;
 }
 
-.footer-menu__left {
+.site-map-menu__left {
   width: 50%;
 
   @include mq("md") {
@@ -13,143 +13,139 @@
   }
 }
 
-.footer-menu__item {
+.site-map-menu__item {
   text-align: center;
   position: relative;
   align-items: center;
   display: block;
+  white-space: nowrap;
 }
 
-.footer-menu__items-a {
+.site-map-menu__items-a {
   width: 100%;
   padding-left: rem(23);
-  margin-top: rem(28);
+  // margin-top: rem(28);
+  // margin-top: rem(38);
 
-  @include mq("md") {
-    margin-top: rem(0);
-  }
+  // @include mq("md") {
+  //   margin-top: rem(0);
+  // }
 }
 
-.footer-menu__items-b {
+.site-map-menu__items-b {
   width: 100%;
   padding-left: rem(22);
   margin-top: rem(16);
 
   @include mq("md") {
     margin-top: rem(0);
-    margin-left: rem(120);
+    margin-left: rem(144);
   }
 }
 
-.footer-menu__items-c {
+.site-map-menu__items-c {
   width: 100%;
   padding-left: rem(22);
-  margin-top: rem(13);
+  margin-top: rem(12);
 
   @include mq("md") {
     margin-top: rem(0);
-    margin-left: rem(120);
+    margin-left: rem(147);
   }
 }
 
-
-.footer-menu__link-a {
+.site-map-menu__link-a {
   width: 100%;
   font-size: rem(16);
   text-align: center;
-  color: $white;
+  color: $black;
   display: flex;
   padding-top: rem(12);
   padding-bottom: rem(10);
 }
 
-.footer-menu__link-b {
+.site-map-menu__link-b {
   width: 100%;
   font-size: rem(16);
   text-align: center;
-  color: $white;
+  color: $black;
   display: flex;
   padding-top: rem(12);
   padding-bottom: rem(12);
   margin-top: rem(17.3);
 }
 
-.footer-menu__link-a::before {
+.site-map-menu__link-a::before {
   content: "";
   width: rem(18); /*画像の幅*/
   height: rem(18); /*画像の高さ*/
-  background-image: url(../images/drawer-logo.svg);
+  background-image: url(../images/site-map-logo.svg);
   background-size: contain;
   top: rem(12);
   left: rem(-23);
   position: absolute;
 }
-.footer-menu__link-b::before {
+.site-map-menu__link-b::before {
   content: "";
   width: rem(18); /*画像の幅*/
   height: rem(18); /*画像の高さ*/
-  background-image: url(../images/drawer-logo.svg);
+  background-image: url(../images/site-map-logo.svg);
   background-size: contain;
   top: rem(12);
   left: rem(-23);
   position: absolute;
 }
 
-.footer-menu__logo-text {
+.site-map-menu__logo-text {
   font-size: rem(16);
-  color: $white;
+  color: $black;
   font-weight: $bold;
   text-align: left;
   line-height: 1.125;
   font-family: "Noto Sans JP", serif;
 }
 
-.footer-menu__logo-text:hover {
+.site-map-menu__logo-text:hover {
   opacity: 0.7;
   transition: 0.3s;
 }
 
-.footer-menu__item-text {
+.site-map-menu__item-text {
   padding-top: rem(11);
   padding-bottom: rem(7);
-  color: $white;
+  color: $black;
   vertical-align: middle;
   list-style-type: none;
   white-space: nowrap;
   font-family: "Noto Sans JP", serif;
 }
 
-.footer-menu__item-text-b {
+.site-map-menu__item-text-b {
   padding-top: rem(12);
   padding-bottom: rem(7);
-  color: $white;
+  color: $black;
   vertical-align: middle;
   list-style-type: none;
   white-space: nowrap;
-
-  @include mq("md") {
-    padding-top: rem(12);
-    padding-bottom: rem(7);
-  }
 }
 
-.footer-menu__item-text:hover {
+.site-map-menu__item-text:hover {
   opacity: 0.7;
   transition: 0.3s;
 }
 
-.footer-menu__item-text-b:hover {
+.site-map-menu__item-text-b:hover {
   opacity: 0.7;
   transition: 0.3s;
 }
 
-.footer-menu__right {
-  margin-left: rem(16);
+.site-map-menu__right {
+  margin-left: rem(27);
   width: 50%;
 
   @include mq("md") {
     display: flex;
-    margin-left: rem(120);
+    margin-left: rem(142);
     width: auto;
   }
 }
