--- a/src/sass/module/_page-section-title.scss
+++ b/src/sass/module/_page-section-title.scss
@@ -10,6 +10,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
+  white-space: nowrap;
 
   @include mq("md") {
     font-size: rem(80);
