--- a/src/sass/module/_contact-form__button.scss
+++ b/src/sass/module/_contact-form__button.scss
@@ -19,6 +19,7 @@
   z-index: 1;
   border: rem(1) solid $green;
   font-family: "Gotu", sans-serif;
+  cursor: pointer;
 }
 
 .contact-form__button::before {
