--- a/src/sass/module/_footer-menu.scss
+++ b/src/sass/module/_footer-menu.scss
@@ -26,7 +26,7 @@
   display: block;
 }
 
-.footer-menu__items-a {
+.footer-menu__left-items-upper {
   width: 100%;
   padding-left: rem(23);
   margin-top: rem(28);
@@ -36,7 +36,7 @@
   }
 }
 
-.footer-menu__items-b {
+.footer-menu__left-items-bottom {
   width: 100%;
   padding-left: rem(22);
   margin-top: rem(16);
@@ -47,7 +47,17 @@
   }
 }
 
-.footer-menu__items-c {
+.footer-menu__right-items-upper {
+  width: 100%;
+  padding-left: rem(23);
+  margin-top: rem(28);
+
+  @include mq("md") {
+    margin-top: rem(0);
+  }
+}
+
+.footer-menu__right-items-bottom {
   width: 100%;
   padding-left: rem(22);
   margin-top: rem(13);
@@ -59,7 +69,7 @@
 }
 
 
-.footer-menu__link-a {
+.footer-menu__link-main {
   width: 100%;
   font-size: rem(16);
   text-align: center;
@@ -69,7 +79,7 @@
   padding-bottom: rem(10);
 }
 
-.footer-menu__link-b {
+.footer-menu__link-sub {
   width: 100%;
   font-size: rem(16);
   text-align: center;
@@ -80,7 +90,7 @@
   margin-top: rem(17.3);
 }
 
-.footer-menu__link-a::before {
+.footer-menu__link-main::before {
   content: "";
   width: rem(18); /*画像の幅*/
   height: rem(18); /*画像の高さ*/
@@ -90,7 +100,7 @@
   left: rem(-23);
   position: absolute;
 }
-.footer-menu__link-b::before {
+.footer-menu__link-sub::before {
   content: "";
   width: rem(18); /*画像の幅*/
   height: rem(18); /*画像の高さ*/
