タブとページネーション修正

--- a/src/sass/module/_campaign-tab.scss
+++ b/src/sass/module/_campaign-tab.scss
@@ -12,6 +12,7 @@
   font-family: "Noto Sans JP", serif;
   cursor: pointer;
   color: $green;
+  background: $white;
 
   @include mq("md") {
     width: rem(162);
