--- a/src/sass/module/_campaign-page.scss
+++ b/src/sass/module/_campaign-page.scss
@@ -9,6 +9,7 @@
   @include mq("md") {
     column-gap: rem(32);
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -37,6 +38,7 @@
   height: rem(55);
   bottom: 64%;
   left: calc(50% - min(46vw, rem(620)));
+  z-index: -1;
 
   @include mq("md") {
     width: rem(301);
