--- a/src/sass/module/_voice-page-tab.scss
+++ b/src/sass/module/_voice-page-tab.scss
@@ -14,6 +14,7 @@
   height: rem(55);
   bottom: 64%;
   left: calc(50% - min(46vw, rem(620)));
+  z-index: -1;
 
   @include mq("md") {
     width: rem(301);
