--- a/src/sass/module/_gallery-modal.scss
+++ b/src/sass/module/_gallery-modal.scss
@@ -1,10 +1,9 @@
 @use "global" as *;
 
-
 .gallery-modal__inner.inner {
   @include mq("md") {
-      padding-left: rem(105);
-      padding-right: rem(105);
+    padding-left: rem(105);
+    padding-right: rem(105);
   }
 }
 
@@ -33,7 +32,6 @@
   opacity: 1;
 }
 
-
 .gallery-modal__img {
   width: 100%;
 }
@@ -45,14 +43,17 @@
   object-fit: cover;
 }
 
-.gallery-modal__item:nth-of-type(6n+1) .gallery-modal__img img,
-.gallery-modal__item:nth-of-type(6n+6) .gallery-modal__img img {
+.gallery-modal__item:nth-of-type(6n + 1) .gallery-modal__img img,
+.gallery-modal__item:nth-of-type(6n + 6) .gallery-modal__img img {
   aspect-ratio: 345/523;
 
   @include mq("md") {
-      margin: auto;
-      max-height: rem(746);
-      max-width: rem(492);
-      width: 100%;
+    margin: auto;
+    // max-height: rem(746);
+    // max-width: rem(492);
+    aspect-ratio: 345/219;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 }
