--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -7,13 +7,19 @@
   column-gap: rem(40);
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  margin-top: rem(26);
   row-gap: rem(40);
   align-items: center;
 
   @include mq("md") {
     gap: rem(40);
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.blog__cards {
+  margin-top: rem(26);
+
+  @include mq("md") {
     margin-top: rem(78);
   }
 }
