--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -23,3 +23,8 @@
     margin-top: rem(78);
   }
 }
+
+.blog-cards.blog-cards--another {
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+}
