--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -28,3 +28,17 @@
   grid-template-columns: repeat(2, 1fr);
   display: grid;
 }
+
+.blog-cards--detail {
+  grid-column-gap: rem(40);
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+
+  @include mq("md") {
+    grid-template-columns: repeat(1, 1fr);
+    margin-top: rem(0);
+    grid-column-gap: rem(40);
+  }
+}
