--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -54,3 +54,82 @@
   line-height: 1.5;
   font-family: Gotu;
 }
+
+
+.blog-card__inner {
+  position: relative;
+  max-width: rem(600);
+}
+
+.blog-card___inner::before {
+  position: absolute;
+  content: "";
+  background: url(./../images/same-logo.svg) center center / contain no-repeat;
+  width: rem(120);
+  height: rem(55);
+  bottom: 99.4%;
+  left: calc(50% - min(46vw, rem(620)));
+  z-index: 1;
+
+  @include mq("md") {
+    width: rem(301);
+    height: rem(138);
+    bottom: 97.5%;
+    z-index: -1;
+  }
+}
+
+.blog-card___inner.inner {
+  padding-left: rem(21);
+  padding-right: rem(21);
+
+  @include mq("md") {
+    padding-left: $padding-pc;
+    padding-right: $padding-pc;
+  }
+}
+
+.blog-card___container {
+  @include mq("md") {
+    display: flex;
+  }
+}
+
+.blog-card___container-left {
+  @include mq("md") {
+    width: 65.5%;
+  }
+}
+
+.blog-card___container-right {
+  @include mq("md") {
+    width: 27%;
+    margin-left: rem(80);
+  }
+}
+
+.blog-card__img img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 301/201;
+}
+
+.blog-card__img {
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out; /* トランジションを一貫して設定 */
+  overflow: hidden;
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 301/201;
+}
+
+.blog-card:hover .blog-card__img img {
+  transform: scale(1.1);
+}
+
+.blog-card__img img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 301/201;
+  transition: transform 0.5s ease-in-out; /* トランジションを一貫して設定 */
+}
