--- a/src/sass/module/_blog-heading-card.scss
+++ b/src/sass/module/_blog-heading-card.scss
@@ -14,10 +14,7 @@
   cursor: pointer;
 }
 
-.blog-heading-card:hover .blog-heading-card__img img {
-  transform: scale(1.1);
-  transition: 0.3s ease-in-out;
-}
+
 
 .blog-heading-card__item {
   display: flex;
@@ -35,19 +32,6 @@
   font-family: Noto Sans JP;
 }
 
-.blog-heading-card__img {
-  width: 46%;
-  transform: scale(1);
-  transition: 0.3s ease-in-out;
-  overflow: hidden;
-  object-fit: cover;
-  aspect-ratio: 121/90;
-}
-
-.blog-heading-card__img:hover img {
-  transform: scale(1.1);
-  transition: 1s all;
-}
 
 .blog-heading-card__img img {
   width: 100%;
@@ -60,4 +44,25 @@
   font-weight: $normal;
   line-height: 1.5;
   font-family: "Gotu", sans-serif;
+}
+
+.blog-heading-card:hover .blog-heading-card__img img {
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out; /* トランジションを一貫して設定 */
+}
+
+.blog-heading-card__img {
+  width: 46%;
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out; /* トランジションを一貫して設定 */
+  overflow: hidden;
+  object-fit: cover;
+  aspect-ratio: 121/90;
+}
+
+.blog-heading-card__img img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 121/90;
+  transition: transform 0.5s ease-in-out; /* トランジションを一貫して設定 */
 }
