--- a/src/sass/module/_faq-page-accordion.scss
+++ b/src/sass/module/_faq-page-accordion.scss
@@ -62,6 +62,9 @@
   content: "";
   transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
   border-top: rem(1) solid $white;
+  transform: rotate(0deg);
+  opacity: 1;
+
 
   @include mq("md") {
     width: rem(32);
@@ -78,7 +81,7 @@
   height: rem(1);
   content: "";
   transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
-  transform: rotate(-90deg);
+  transform: rotate(90deg);
   border-top: rem(1) solid $white;
   opacity: 1;
 
@@ -90,12 +93,13 @@
 
 .faq-page-accordion__title.is-open::before {
   transform: rotate(180deg);
+  opacity: 0;
 }
 
 .faq-page-accordion__title.is-open::after {
   top: 45%;
-  transform: rotate(-90deg);
-  opacity: 0;
+  transform: rotate(180deg);
+  opacity: 1;
 }
 
 .faq-page-accordion__item:not(:first-child) {
@@ -111,7 +115,7 @@
 }
 
 .faq-page-accordion__content {
-  display: none;
+  display: block;
   border-right: rem(1) solid $green;
   border-bottom: rem(1) solid $green;
   border-left: rem(1) solid $green;
