FAQインナー修正

--- a/src/sass/module/_faq-page-accordion.scss
+++ b/src/sass/module/_faq-page-accordion.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
 
 
-.faq-page-accordion__inner {
+.faq-page-accordion__inner.inner {
   position: relative;
-  max-width: rem(600);
+  max-width: rem(750);
 }
 
 .faq-page-accordion__inner::before {
