--- a/src/sass/module/_gallery-modal.scss
+++ b/src/sass/module/_gallery-modal.scss
@@ -1,9 +1,10 @@
 @use "global" as *;
 
-.gallery-modal__inner.inner {
+.gallery-modal__inner {
   @include mq("md") {
     padding-left: rem(105);
     padding-right: rem(105);
+    height: 90vh;
   }
 }
 
@@ -34,13 +35,14 @@
 
 .gallery-modal__img {
   width: 100%;
+  height: inherit;
 }
 
 .gallery-modal__img img {
   width: 100%;
   height: 100%;
   aspect-ratio: 345/219;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .gallery-modal__item:nth-of-type(6n + 1) .gallery-modal__img img,
@@ -51,9 +53,9 @@
     margin: auto;
     // max-height: rem(746);
     // max-width: rem(492);
-    aspect-ratio: 345/219;
+    // aspect-ratio: 345/219;
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 }
