--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -29,7 +29,7 @@
   display: grid;
 }
 
-.blog-cards--detail {
+.blog-cards-detail {
   grid-column-gap: rem(40);
   align-items: center;
   display: grid;
