--- a/src/sass/module/_blog-cards-detail.scss
+++ b/src/sass/module/_blog-cards-detail.scss
@@ -1,55 +1,5 @@
 @use "global" as *;
 
-
-.blog-cards-detail p {
-  font-size: rem(16);
-  font-weight: $normal;
-  line-height: 1.5;
-  font-family: "Noto Sans JP", serif;
-  margin-top: rem(24);
-
-  @include mq("md") {
-    letter-spacing: 0.005em;
-    margin-top: rem(40);
-  }
-}
-
-.blog-cards-detail ul {
-  margin-top: rem(24);
-  padding-left: rem(26);
-
-  @include mq("md") {
-    margin-top: rem(40);
-  }
-}
-
-
-.blog-cards-detail li::before {
-  background-image: url(./../images/detail-logo.svg);
-  content: "";
-  width: rem(18); /*画像の幅*/
-  height: rem(18); /*画像の高さ*/
-  background-repeat: no-repeat;
-  position: absolute;
-  background-size: contain;
-  left: rem(16);
-  margin-top: rem(3);
-
-  @include mq("md") {
-    left: rem(24);
-  }
-}
-
-.blog-cards-detail li {
-  font-size: rem(16);
-  line-height: calc(24/16);
-  font-family: "Noto Sans JP", serif;
-}
-
-.blog-cards-detail li:not(:first-child) {
-  margin-top: rem(4);
-}
-
 .blog-cards-detail__title {
   @include mq("md") {
     margin-top: rem(-4);
@@ -79,27 +29,6 @@
   }
 }
 
-
-.blog-cards-detail figure {
-  overflow: hidden;
-  width: 100%;
-  object-fit: cover;
-  aspect-ratio: 301/201;
-}
-
-.blog-cards-detail figure:not(:first-child) {
-  margin-top: rem(24);
-
-  @include mq("md") {
-    margin-top: rem(39);
-  }
-}
-
-.blog-cards-detail figure img {
-  width: 100%;
-  object-fit: cover;
-  aspect-ratio: 301/201;
-}
 
 .blog-cards-detail__date {
   font-size: rem(14);
@@ -198,6 +127,19 @@
 }
 
 .blog-cards-detail__item-container figure img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 301/201;
+}
+
+.blog-cards-detail__item-box figure {
+  overflow: hidden;
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 301/201;
+}
+
+.blog-cards-detail__item-box figure img {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 301/201;
