--- a/src/sass/module/_voice-cards.scss
+++ b/src/sass/module/_voice-cards.scss
@@ -3,12 +3,16 @@
 .voice-cards {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  margin-top: rem(45);
-  grid-row-gap: rem(41);
+  // grid-row-gap: rem(41);
+  gap: rem(40);
 
   @include mq("md") {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+
+.voice__cards {
+  margin-top: rem(45);
 }
 
 .voice-cards__item-box {
