--- a/src/sass/module/_blog-page-cards.scss
+++ b/src/sass/module/_blog-page-cards.scss
@@ -7,7 +7,7 @@
   column-gap: rem(40);
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  margin-top: rem(26);
+  // margin-top: rem(26);
   align-items: center;
 
   @include mq("md") {
