--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -11,8 +11,24 @@
   align-items: center;
 
   @include mq("md") {
-    gap: rem(40);
+    grid-column-gap: rem(40);
+    grid-row-gap: rem(80);
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.blog-cards--2pattern {
+  grid-column-gap: rem(40);
+  grid-row-gap: rem(40);
+  align-items: center;
+  column-gap: rem(40);
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+
+  @include mq("md") {
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: rem(0);
   }
 }
 
