ボタン修正

--- a/src/sass/module/_campaign.scss
+++ b/src/sass/module/_campaign.scss
@@ -64,7 +64,7 @@ cursor: pointer;
 background-repeat: no-repeat;
 background-size: contain;
 content: "";
-background-image: url(/assets/images/arrow1.svg);
+background-image: url(./../images/arrow1.svg);
 width: rem(80);
 height: rem(80);
 display: block;
@@ -79,7 +79,7 @@ top: 0;
 background-repeat: no-repeat;
 background-size: contain;
 content: "";
-background-image: url(/assets/images/arrow2.svg);
+background-image: url(./../images/arrow2.svg);
 width: rem(80);
 height: rem(80);
 display: block;
